Fix copy/paste error in ProcessPoolConfiguration::createWithWebsiteDataStoreConfiguration() https://bugs.webkit.org/show_bug.cgi?id=180782

Reviewed by Youenn Fablet.

* UIProcess/API/APIProcessPoolConfiguration.cpp:
(API::ProcessPoolConfiguration::createWithWebsiteDataStoreConfiguration):

Canonical link: https://commits.webkit.org/196692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225890 268f45cc-cd09-0410-ab3c-d52691b4dbfc